--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-Co-authored-by: name <mikiyase744@gmial.com>
-Co-authored-by: another-name <ephisismu@gmail.com>"
+# Contrbuters of the simple shell project
+Co-authored-by: Mikiyas Eyob <mikiyase744@gmial.com>
+Co-authored-by: Ephrem Sisay <ephisismu@gmail.com>"
