adding shell file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# Contrbuters of the simple shell project
-Co-authored-by: Mikiyas Eyob <mikiyase744@gmial.com>
-Co-authored-by: Ephrem Sisay <ephisismu@gmail.com>"
+# Contrbuters of the simple shell project.
+
+Co-authored-by: Mikiyas Eyob <mikiyase744@gmail.com>
+Co-authored-by: Ephrem Sisay <ephisismu@gmail.com>
